<resources>
    <string name="app_name" translatable="false">News Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="lorem_ipsum" translatable="false">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>
    <string name="general">General</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="business">Business</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="science">Science</string>
    <string name="search">Search</string>
    <string name="start_searching">Start Searching</string>

    <string name="latest">Latest</string>
    <string name="settings">Settings</string>
    <string name="settingsThemeTitle">Dark Theme</string>
    <string name="settingsLanguageTitle">Language</string>
    <string name="app_preferences">App Preferences</string>

    <string name="lang_de">German</string>
    <string name="lang_en">English</string>
    <string name="lang_fr">French</string>
    <string name="lang_it">Italian</string>
    <string name="lang_pt">Portuguese</string>
    <string name="lang_ru">Russian</string>
    <string name="lang_zh">Chinese</string>
    <string name="share">Share</string>
    <string name="save">Save</string>

    <string name="delete">Delete</string>
    <string name="saved_stories">Saved Stories</string>
    <string name="find_your_saved_articles">Find your saved articles</string>
</resources>