<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/app_preferences">

        <ListPreference
            android:defaultValue="us"
            android:entries="@array/languagesISO"
            android:entryValues="@array/languagesValues"
            android:key="language"
            app:title="@string/settingsLanguageTitle" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="nightMode"
            android:title="@string/settingsThemeTitle" />

        <Preference app:title="@string/saved_stories"
            android:key="navigateToSavedNewsFragment"
            android:summary="@string/find_your_saved_articles" />

    </PreferenceCategory>

</PreferenceScreen>